--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -13,7 +13,7 @@ import Marquee from "./Marquee.astro";
 	<HeartRain />
 	<main style="position: relative; z-index: 1;">
 		<HeroText />
-		<VideoBox />
+		<VideoBox bucket="videos" />
 		<CountDown />
 	</main>
 	<Marquee />
