--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -10,10 +10,9 @@
 <style>
   .text {
     font-size: 2.5rem;
-    color: white;
+    color: black;
     text-align: center;
     line-height: 1.4;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     opacity: 0;
   }
 
@@ -51,7 +50,7 @@
 
   @media screen and (max-width: 640px) {
     .text {
-      font-size: 1.75rem;
+      font-size: 2.5rem;
       padding: 0 1rem;
     }
   }
